# brainfork

./: .gitignore  README.md  SETUP.md  demo.py  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: advanced_example.py  basic_example.py  config_example.py  router_config_template.json
src/brainfork/: __init__.py  auth.py  client_factory.py  exceptions.py  models.py  router.py  routing_engine.py  utils.py
tests/: test_router.py
